test/libhyperion/syntaxTests/abiEncoder/overloaded_external_functions_taking_different_structs.hyp
pragma abicoder               v2;

contract C {
    struct S1 { function() external a; }
    struct S2 { bytes24 a; }
    function f(S1 memory) public pure {}
    function f(S2 memory) public pure {}
}
// ----
// TypeError 4888: (64-85): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
